# multi-agent-churn-prediction

./: .gitignore  README.md  environment.yml  pyproject.toml
notebook/EDA/: 01_EDA_customers.ipynb  02_EDA_orders.ipynb  03_EDA_order_items.ipynb  08_EDA_geolocation.ipynb
src/churn_prediction/: paths.py
src/churn_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
